Dashboard'a onay bekleyen izin, avans ve masraf bilgileri gelmektedir.

--- a/HR_Project/HR_Project.Presentation/Views/Home/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Home/Index.cshtml
@@ -1,9 +1,6 @@
-﻿@{
-	ViewData["Title"] = "Index";
-	Layout = "~/Views/Shared/_GeneralLayout.cshtml";
-}
+﻿
 
-<div class="card shadow mb-4">
+@* <div class="card shadow mb-4">
 	<!-- Card Header - Accordion -->
 	<a href="#collapseAbcense" class="d-block card-header py-3" data-toggle="collapse" role="button" aria-expanded="true" aria-controls="collapseAbcense">
 		<h6 class="m-0 font-weight-bold text-primary">Onay Bekleyen İzinler</h6>
@@ -30,4 +27,113 @@
 		</div>
 	</div>
 </div>
+ *@
+
+@{
+    var pendingAbsenceCount = await Component.InvokeAsync("AbsenceCardComponent");
+    var pendingAdvanceCount = await Component.InvokeAsync("AdvanceCardComponent");
+    var pendingExpenseCount = await Component.InvokeAsync("ExpenseCardComponent");
+}
+
+@{
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_GeneralLayout.cshtml";
+
+}
+
+
+<body id="page-top">
+
+    <!-- Main Content -->
+    <div id="content">
+
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
+
+            <!-- Page Heading -->
+            <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                <h1 class="h3 mb-0 text-gray-800"></h1>
+            </div>
+
+
+            <div class="row">
+
+                <!-- absence card  -->
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <div class="card border-left-primary shadow h-100 py-2">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                        onay bekleyen izin talepleri
+                                    </div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800">@pendingAbsenceCount</div>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="fas fa-sun fa-2x text-gray-300"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- Advance card  -->
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <div class="card border-left-primary shadow h-100 py-2">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                        onay bekleyen avans talepleri
+                                    </div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800">@pendingAdvanceCount</div>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="fas fa-money-bill-alt fa-2x text-gray-300"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- Expense card  -->
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <div class="card border-left-primary shadow h-100 py-2">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                        onay bekleyen masraf talepleri
+                                    </div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800">@pendingExpenseCount</div>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="fas fa-money-bill-alt fa-2x text-gray-300"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+
+        </div>
+
+        </div>
+
+
+
+
+
+   
+
+</body>
+
+
+
 
